k8s/services/actual/app/risson/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: actual
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: actual
  hostnames:
    - budget.risson.space
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: actual
          port: 80
      timeouts:
        request: 60s
        backendRequest: 60s
